# multi-camera-tracking-research

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_linux.sh  setup_windows.ps1
configs/experiments/: botsort.yaml  bytetrack.yaml  bytetrack_yolo11n_960_c015.yaml  bytetrack_yolo11n_960_c020.yaml  bytetrack_yolo11n_960_c025.yaml
data/: README.md
docs/: experiment_protocol.md  ground_truth_evaluation.md
notebooks/: README.md
reports/: intermediate_report_template.md
reports/metrics/: bytetrack_C3_summary.csv  custom_C3_summary.csv  transfer_C1C3_to_C1C6_summary.csv  transfer_C1C6_to_C1C3_summary.csv
scripts/: analyze_wildtrack_detection_ground.py  analyze_wildtrack_detection_iou.py  analyze_wildtrack_overlap.py  associate_wildtrack_global_tracks.py  associate_wildtrack_global_tracks_strict.py  check_environment.py  check_wildtrack.py  compare_runs.py  create_global_id_review_gallery.py  create_wildtrack_preview.py  detect_wildtrack_pair.py  evaluate_tracking.py  evaluate_wildtrack_hungarian.py  evaluate_wildtrack_hungarian_fixed.py  evaluate_wildtrack_oracle_geometry.py  evaluate_wildtrack_practical_geometry.py  evaluate_wildtrack_reid.py  evaluate_wildtrack_tracklets.py  evaluate_wildtrack_yolo_reid_geometry.py  export_motchallenge.py  import_cvat_mot.py  prepare_wildtrack_pair_dataset.py  run_tracking.py  track_wildtrack_reid_geometry.py  track_wildtrack_sequence.py  validate_wildtrack_geometry.py  visualize_wildtrack_global_tracks.py  visualize_wildtrack_gt.py
tests/: test_config.py  test_evaluation.py  test_metrics.py
(+7 files in other folders)
